fix checkbox overflow

--- a/src/styles/checkbox.scss
+++ b/src/styles/checkbox.scss
@@ -21,7 +21,7 @@
     padding: 0;
     margin: 0;
     transition: background-color 0.25s, border-color 0.25s;
-
+    overflow: hidden;
 
     &:hover {
       &::before {
