--- a/src/styles/material-generic.css
+++ b/src/styles/material-generic.css
@@ -462,7 +462,8 @@ input:focus, textarea:focus, code:focus {
     border-radius: 2px;
     padding: 0;
     margin: 0;
-    transition: background-color 0.25s, border-color 0.25s; }
+    transition: background-color 0.25s, border-color 0.25s;
+    overflow: hidden; }
     .checkbox input[type="checkbox"]:hover::before {
       width: 250%;
       height: 250%;
